--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 
 .letter {
     position: absolute;
-    top: 0;
+    top: 2;
     width: 80%;
     height: 80%;
     background-color: #FFF5F7;
@@ -115,8 +115,15 @@ body {
 .letter h1 {
     text-align: center;
     font-size: 24px;
-    margin-top: 30px;
+    margin-top: 0px;
     color: #D43F5E;
+    font-weight: bold;
+}
+.letter p {
+    text-align: center;
+    font-size: 15px;
+    margin-top: 10px;
+    color: #000000;
     font-weight: bold;
 }
 
@@ -322,7 +329,7 @@ button:hover {
   transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
-  background-color: #e73030;
+  background-color: #9e30e7;
   filter: blur(10vmin);
 }
 .flower__leaf {
@@ -332,8 +339,8 @@ button:hover {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #e73030;
-  background-image: linear-gradient(to top, #ec1010, #e73030);
+  background-color:  #9e30e7;
+  background-image: linear-gradient(to top,  #9e30e7,  #9e30e7);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -353,7 +360,7 @@ button:hover {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #ec1010, #e73030);
+  background-image: linear-gradient(to top,  #9e30e7, #9e30e7);
   z-index: 1;
   opacity: 0.8;
 }
